--- a/7章確認問題.html
+++ b/7章確認問題.html
@@ -1,1 +1,9 @@
 <!DOCTYPE html>
+<html lang="ja">
+
+<head>
+  <meta charset="UTF-8">
+  <title>７章確認問題</title>
+  <link rel="stylesheet" href="７章確認問題.css">
+</head>
+</html>
