[add]main-visual

--- a/7章確認問題.html
+++ b/7章確認問題.html
@@ -4,6 +4,18 @@
 <head>
   <meta charset="UTF-8">
   <title>７章確認問題</title>
-  <link rel="stylesheet" href="７章確認問題.css">
+  <link rel="stylesheet" href="7章確認問題.css">
 </head>
+
+<section class="main-visual">
+  <h1 class="headline">サービス紹介</h1>
+</section>
+
+<main>
+  <section class="webcamp"></section>
+  <section class="web camp-pro"></section>
+  <section class="webcamp-woman"></section>
+  <section class="webcamp-career"></section>
+</main>
+
 </html>
