--- a/7章演習問題.html
+++ b/7章演習問題.html
@@ -29,8 +29,16 @@
     <h2>
       <img src="img/wcw-logo.png">
     </h2>
+    <p>家庭も仕事も頑張りたいママ・主婦向けの<br>
+    １ヶ月でWebサイトを制作するWebデザインスクールです。</p>
+    <a href="https://web-camp.io/skills/">webページ</a>
   </section>
-  <section class="webcamp-career"></section>
+  <section class="webcamp-career">
+    <h2><img src="img/wcc-logo.png"></h2>
+    <p>3000名のエンジニアをサポートしてきたエージェントが<br>
+    あなたの転職をサポート</p>
+    <a href="https://web-camp.io/service/">webページ</a>
+  </section>
 </main>
 
 </html>
