[Fix]トラブル時のテキスト追加

--- a/7章演習問題.html
+++ b/7章演習問題.html
@@ -13,13 +13,13 @@
 
 <main>
   <section class="webcamp">
-    <h2><img src="img/wc-logo.png"></h2>
+    <h2><img src="img/wc-logo.png" alt="ロゴ"></h2>
     <p>マンツーマンサポートによる学習で、<br>
       確実にwebスキルを習得できるプログラミングスクールです。</p>
       <a href="https://web-camp.io/">webページ</a>
   </section>
   <section class="webcamp-pro">
-    <h2><img src="img/wcp-logo.png"></h2>
+    <h2><img src="img/wcp-logo.png" alt="ロゴ"></h2>
     <p>未経験から転職を保証する<br>
       日本で唯一のプログラミングスクールです。
     </p>
@@ -27,14 +27,14 @@
   </section>
   <section class="webcamp-woman">
     <h2>
-      <img src="img/wcw-logo.png">
+      <img src="img/wcw-logo.png"　alt="ロゴ">
     </h2>
     <p>家庭も仕事も頑張りたいママ・主婦向けの<br>
     １ヶ月でWebサイトを制作するWebデザインスクールです。</p>
     <a href="https://web-camp.io/skills/">webページ</a>
   </section>
   <section class="webcamp-career">
-    <h2><img src="img/wcc-logo.png"></h2>
+    <h2><img src="img/wcc-logo.png" alt="ロゴ"></h2>
     <p>3000名のエンジニアをサポートしてきたエージェントが<br>
     あなたの転職をサポート</p>
     <a href="https://web-camp.io/service/">webページ</a>
